--- a/pom.xml
+++ b/pom.xml
@@ -5,9 +5,8 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
-	
-	<name>maven-web-application</name>
+	<version>2.0</version>
+		<name>maven-web-application</name>
 
 	<description>Maven Web Project for Java Project</description>
 
