--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.233.108.94:8081/repository/flipkart-releases/</url>
+	      <url>http://35.154.69.23:8081/repository/java/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.233.108.94:8081/repository/flipkart-snapshot/</url>
+	      <url>http://35.154.69.23:8081/repository/java//</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
